--- a/app/public/js/audio-record/audio-record.template.html
+++ b/app/public/js/audio-record/audio-record.template.html
@@ -1,21 +1,17 @@
 <div id="audiorecord-wrapper">
 	<div class="header p" ng-class="{'bgc-amber-500': ($ctrl.state === 'unsupport')}">
 		<h1>Audio Record</h1>
-		<p ng-show="!$ctrl.unSupport">Realize grabaciones de audio desde su dispositivo de forma facíl y sencillas.</p>
-		<p ng-show="$ctrl.unSupport">Capacidad no soportada.</p>
+		<p ng-show="$ctrl.state !== 'unsupport'">Realize grabaciones de audio desde su dispositivo de forma facíl y sencillas.</p>
+		<p ng-show="$ctrl.state === 'unsupport'">Capacidad no soportada.</p>
 	</div>
 	<div class="main p" ng-class="{unsupport: ($ctrl.state === 'unsupport')}" flex-column>
-		<div class="card p">
-			<h4>Destino en Servidor</h4>
-			<input type="text" name="path" ng-model="$ctrl.path">
-		</div>
 		<div class="card p">
 			<div flex-container="row" flex-column="16">
 				<div flex-item="14">
 					<audio controls="true" id="audioOutput" autoplay="" ng-src="{{$ctrl.input}}"></audio>
 				</div>
 				<div flex-item="{{($ctrl.state === 'pause')? 1 : 2;}}" style="text-align: center;">
-					<lx-button ng-show="$ctrl.state === 'stopped'"
+					<lx-button ng-show="$ctrl.state === 'stopped' || $ctrl.state === 'unsupport'"
 						lx-type="fab" 
 						lx-size="s" 
 						lx-color="red"  
@@ -93,26 +89,6 @@
 						lx-tooltip-position="bottom"
 						ng-click="$ctrl.play($index)">
 						<i class="mdi mdi-play"></i>
-						</lx-button>
-						<lx-button 
-						lx-type="icon"
-						lx-size="m"
-						lx-color="green"
-						lx-tooltip="Send" 
-						lx-tooltip-position="bottom"
-						ng-click="$ctrl.send($index)">
-						<i class="mdi mdi-send"></i>
-						</lx-button>
-						<lx-button 
-						lx-type="icon"
-						lx-size="m"
-						lx-color="blue"
-						lx-tooltip="Download" 
-						lx-tooltip-position="bottom">
-						<a class="mdi mdi-download" 
-							ng-href="audio.datauri" 
-							name="{{audio.name}}" 
-							download="{{audio.name}}"></a>
 						</lx-button>
 					</div>
 				</div>
