--- a/app/public/js/video-record/video-record.template.html
+++ b/app/public/js/video-record/video-record.template.html
@@ -1,9 +1,100 @@
-<div class="card">
-	<div class="header">
+<div id="videorecord-wrapper">
+	<div class="header p" ng-class="{'bgc-amber-500': ($ctrl.state === 'unsupport')}">
 		<h1>Video Record</h1>
-		<p>Grabe clips de video desde su dispositivo.</p>
+		<p ng-show="$ctrl.state !== 'unsupport'">Realize grabaciones de video desde su dispositivo de forma facíl y sencillas.</p>
+		<p ng-show="$ctrl.state === 'unsupport'">Capacidad no soportada.</p>
 	</div>
-	<div class="main">
-
+	<div class="main p" ng-class="{unsupport: ($ctrl.state === 'unsupport')}" flex-column>
+		<div flex-container="row" flex-column="16">
+			<div flex-item="11" id="showcase">
+				<video class="card p" controls="true" id="audioOutput" autoplay="" poster="images/otislogo.svg" ng-src="{{$ctrl.input}}"></video>
+			</div>
+			<div flex-item="5" flex-container="column">
+				<div id="controls" flex-container="row" flex-column="12" class="card p center">
+					<div flex-item="{{($ctrl.state === 'pause')? 6 : 12;}}" style="text-align: center;">
+						<lx-button ng-show="$ctrl.state === 'stopped' || $ctrl.state === 'unsupport'"
+							lx-type="fab" 
+							lx-size="s" 
+							lx-color="red"  
+							lx-tooltip="Grabar" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.rec()"
+							class="btn-control">
+							<i class="mdi mdi-record"></i>
+						</lx-button>
+						<lx-button ng-show="$ctrl.state === 'recording'"
+							lx-type="fab" 
+							lx-size="s" 
+							lx-color="blue" 
+							lx-tooltip="Parar" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.pause()"
+							class="btn-control">
+							<i class="mdi mdi-pause"></i>
+						</lx-button>
+						<lx-button ng-show="$ctrl.state === 'pause'"
+							lx-type="fab" 
+							lx-size="s" 
+							lx-color="blue" 
+							lx-tooltip="Cancelar" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.cancel()"
+							class="btn-control">
+							<i class="mdi mdi-close"></i>
+						</lx-button>
+					</div>
+					<div flex-item="6" ng-show="$ctrl.state === 'pause'" style="text-align: center;">
+						<lx-button 
+							lx-type="fab" 
+							lx-size="s" 
+							lx-color="green" 
+							lx-tooltip="Guardar" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.save()"
+							class="btn-control">
+							<i class="mdi mdi-content-save"></i>
+						</lx-button>
+					</div>
+				</div>
+				<div class="card" id="list-rec">
+					<div class="card-header p">
+						<h3>Grabaciones</h3>
+						<p>Actualmente existen <span ng-bind="$ctrl.recs.length"></span> grabaciones.</p>
+					</div>
+					<div class="card-main">
+						<div 
+							class="card p" 
+							ng-class="{unsupport:($ctrl.state !== 'stopped')}"
+							flex-container="row" 
+							flex-column="16" 
+							ng-repeat="audio in $ctrl.recs">
+							<div class="center" flex-item="12">
+								<h5><span ng-bind="audio.name"></span></h5>
+							</div>
+							<div flex-item="4" class="center">
+								<lx-button 
+								lx-type="icon"
+								lx-size="m"
+								lx-color="red"
+								lx-tooltip="Delete" 
+								lx-tooltip-position="bottom"
+								ng-click="$ctrl.delete($index)">
+								<i class="mdi mdi-delete"></i>
+								</lx-button>
+								<lx-button 
+								lx-type="icon"
+								lx-size="m"
+								lx-color="green"
+								lx-tooltip="Play" 
+								lx-tooltip-position="bottom"
+								ng-click="$ctrl.play($index)">
+								<i class="mdi mdi-play"></i>
+								</lx-button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	<div>
 </div>
