--- a/app/public/js/media-record/audio-record.template.html
+++ b/app/public/js/media-record/audio-record.template.html
@@ -58,8 +58,24 @@
 		</div>
 		<div class="card" id="list-rec">
 			<div class="card-header p">
-				<h3>Grabaciones</h3>
-				<p>Actualmente existen <span ng-bind="$ctrl.recs.length"></span> grabaciones.</p>
+				<div flex-container="row" flex-column="16">
+					<div flex-item="14">
+						<h3>Grabaciones</h3>
+						<p>Actualmente existen <span ng-bind="$ctrl.recs.length"></span> grabaciones.</p>
+					</div>
+					
+					<div flex-item="2" class="center">
+						<lx-button 
+							lx-type="icon"
+							lx-size="m"
+							lx-color="green"
+							lx-tooltip="Play" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.playList()">
+							<i class="mdi mdi-play"></i>
+						</lx-button>
+					</div>
+				</div>
 			</div>
 			<div class="card-main">
 				<div 
@@ -73,22 +89,22 @@
 					</div>
 					<div flex-item="4" class="center">
 						<lx-button 
-						lx-type="icon"
-						lx-size="m"
-						lx-color="red"
-						lx-tooltip="Delete" 
-						lx-tooltip-position="bottom"
-						ng-click="$ctrl.delete($index)">
-						<i class="mdi mdi-delete"></i>
+							lx-type="icon"
+							lx-size="m"
+							lx-color="red"
+							lx-tooltip="Delete" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.delete($index)">
+							<i class="mdi mdi-delete"></i>
 						</lx-button>
 						<lx-button 
-						lx-type="icon"
-						lx-size="m"
-						lx-color="green"
-						lx-tooltip="Play" 
-						lx-tooltip-position="bottom"
-						ng-click="$ctrl.play($index)">
-						<i class="mdi mdi-play"></i>
+							lx-type="icon"
+							lx-size="m"
+							lx-color="green"
+							lx-tooltip="Play" 
+							lx-tooltip-position="bottom"
+							ng-click="$ctrl.play($index)">
+							<i class="mdi mdi-play"></i>
 						</lx-button>
 					</div>
 				</div>
